--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -9,7 +9,7 @@ body {
 	background-color: $body-color;
 }
 
-/* 
+/*
    Main content
    ========================================================================== */
 
@@ -46,7 +46,7 @@ body {
 	}
 }
 
-/* 
+/*
    Entry header
    ========================================================================== */
 
@@ -97,7 +97,8 @@ body {
 	display: table;
 	margin-top: 0;
 	width: 100%;
-	height: $feature-image-height;
+	height: 100%;
+	//height: $feature-image-height;
 	overflow: hidden;
 
 	.header-title-wrap {
@@ -138,9 +139,9 @@ body {
 
 .entry-image {
 	position: relative;
-	top: -50%; 
-	left: -50%; 
-	width: 200%; 
+	top: -50%;
+	left: -50%;
+	width: 200%;
 	height: 200%;
 	min-height: $feature-image-height;
 	overflow: hidden;
@@ -156,12 +157,12 @@ body {
 	}
 
 	img {
-		position: absolute; 
-		top: 0; 
-		left: 0; 
-		right: 0; 
-		bottom: 0; 
-		margin: auto; 
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
 		min-width: 50%;
 		min-height: $feature-image-height; // match .entry-image min-height
 	}
@@ -212,7 +213,7 @@ body {
 	}
 }
 
-/* 
+/*
    Single post and page
    ========================================================================== */
 
@@ -409,7 +410,7 @@ header .entry-meta {
 		margin: 0;
 		@include font-rem(28);
 
-		a { 
+		a {
 			color: $text-color;
 		}
 
@@ -427,12 +428,12 @@ header .entry-meta {
 	width: 100%;
 	text-align: left;
 
-	h4 { 
+	h4 {
 		@include font-rem(18);
-		margin-bottom: 0; 
+		margin-bottom: 0;
 	}
 
-	span { 
+	span {
 		display: block;
 		@include font-rem(14);
 		color: lighten($base-color,50);
@@ -448,7 +449,7 @@ header .entry-meta {
 	}
 }
 
-/* 
+/*
 Post index
 ========================================================================== */
 
@@ -512,7 +513,7 @@ Post index
 	}
 }
 
-/* 
+/*
 Footer
 ========================================================================== */
 
@@ -527,14 +528,14 @@ Footer
 	}
 }
 
-/* 
+/*
 Social share
 ========================================================================== */
 
 .socialcount {
 	@include font-rem(16);
 
-	li { 
+	li {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
@@ -546,7 +547,7 @@ Social share
 }
 
 
-/* 
+/*
 Browser upgrade
 ========================================================================== */
 
@@ -555,7 +556,7 @@ Browser upgrade
 	text-align: center;
 }
 
-/* 
+/*
 Google Search
 ========================================================================== */
 
@@ -594,7 +595,7 @@ Google Search
 
 .menu-item,
 .menu-open-button{
-	background: #EEEEEE; 
+	background: #EEEEEE;
 	border-radius: 100%;
 	width: 40px;
 	height: 40px;
@@ -674,7 +675,7 @@ Google Search
 	box-sizing: border-box;
 	font-size: 18px;
 
-		
+
 	@media #{$medium} {
 		bottom: 20%;
 	}
@@ -1009,7 +1010,7 @@ Google Search
 			transform: translate3d(0, 0, 0) rotate(-45deg);
 		}
 
-	}	
+	}
 
 
 
@@ -1097,6 +1098,3 @@ Google Search
 	}
 
 }
-
-
-
