--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,7 +1,11 @@
 /* ==========================================================================
    Page layout
    ========================================================================== */
+   html, body {
 
+      height: 100%;
+
+  }
 body {
 	margin: 0;
 	padding: 0;
