--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -56,6 +56,7 @@ body {
 
 .entry-header {
 	width: 100%;
+	height: 100%;
 	overflow: hidden;
 	position: relative;
 }
@@ -143,10 +144,10 @@ body {
 
 .entry-image {
 	position: relative;
-	top: -50%;
-	left: -50%;
-	width: 200%;
-	height: 200%;
+	//top: -50%;
+	//left: -50%;
+	width: 100%;
+	height: 100%;
 	min-height: $feature-image-height;
 	overflow: hidden;
 
