--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -56,7 +56,6 @@ body {
 
 .entry-header {
 	width: 100%;
-	height: 100%;
 	overflow: hidden;
 	position: relative;
 }
@@ -172,7 +171,11 @@ body {
 		min-height: $feature-image-height; // match .entry-image min-height
 	}
 }
-
+#post{
+		.entry-header {
+			height: 100%;
+		}
+}
 // Feature Image height on Front Page
 #post-index {
 
@@ -180,9 +183,13 @@ body {
 		height: $front-page-feature-image-height;
 	}
 
+
 	.entry-image {
 		min-height: $front-page-feature-image-height;
-
+		top: -50%
+		left: -50%;
+		width: 200%;
+		height: 200%;
 		img {
 			min-height: $front-page-feature-image-height;
 		}
