background_img_set

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -172,9 +172,9 @@ body {
 	}
 }
 #post{
-		.entry-header {
-			height: 100%;
-		}
+	.entry-header {
+		height: 100%;
+	}
 }
 // Feature Image height on Front Page
 #post-index {
@@ -186,7 +186,7 @@ body {
 
 	.entry-image {
 		min-height: $front-page-feature-image-height;
-		top: -50%
+		top: -50%;
 		left: -50%;
 		width: 200%;
 		height: 200%;
