--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -2,17 +2,23 @@
    Base Elements and Components
    ========================================================================== */
 
-hr { 
-    display: block; 
-    margin: 1em 0; 
+hr {
+    display: block;
+    margin: 1em 0;
     padding: 0;
-    height: 1px; 
-    border: 0; 
+    height: 1px;
+    border: 0;
     border-top: 1px solid #ccc;
-    border-bottom: 1px solid #fff; 
+    border-bottom: 1px solid #fff;
 }
 
-/* 
+
+code {
+    font-family: $code-font;
+}
+
+
+/*
    Figures and images
    ========================================================================== */
 
@@ -26,7 +32,7 @@ figure {
     margin-bottom: 10px;
   }
 
-  a { 
+  a {
 
     img {
       transform: translate(0, 0);
@@ -73,10 +79,10 @@ figure {
 }
 
 svg:not(:root) {
-  overflow: hidden; 
+  overflow: hidden;
 }
 
-/* 
+/*
    Buttons
    ========================================================================== */
 
@@ -177,7 +183,7 @@ svg:not(:root) {
   }
 }
 
-/* 
+/*
    Wells
    ========================================================================== */
 
