--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -90,7 +90,7 @@ figcaption {
    ========================================================================== */
 
 blockquote {
-	font-family: $alt-font;
+	font-family: $base-font;
 //	font-style: italic;
 	border-left: 3px solid $border-color;
 	padding-left: 20px;
