--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -95,7 +95,19 @@ img {
 // Full width tables
 // -------------------------
 table {
-  width: 100%;
+  border: 1px solid rgba(201, 164, 207, 0.35);
+  background-color: rgba(201, 164, 207, 0.35);
+  width: 80%;
+  margin : 0 10%;
+}
+
+table > tbody {
+  border: 1px solid rgba(53, 53, 53, 0.35);
+  background-color: rgba(255, 255, 255, 1.0);
+}
+
+th, td {
+    padding : 10px;
 }
 
 // Prevent max-width from affecting Google Maps
