--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -102,12 +102,20 @@ blockquote {
 }
 
 .entry-content {
-	h1, h2 {
+	h1 {
 		border-left: 8px solid #999999;
 		padding-left: 20px;
 
 		@media #{$medium} {
 			margin-left: -28px;
+		}
+	}
+	h2 {
+		border-left: 4px solid #999999;
+		padding-left: 15px;
+
+		@media #{$medium} {
+			margin-left: 0px;
 		}
 	}
 }
