--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -105,6 +105,7 @@ blockquote {
 	h1 {
 		border-left: 8px solid #999999;
 		padding-left: 20px;
+		font-size: 1.7em;
 
 		@media #{$medium} {
 			margin-left: -28px;
@@ -112,6 +113,7 @@ blockquote {
 	}
 	h2 {
 
+		font-size: 1.4em;
 		@media #{$medium} {
 			margin-left: -10px;
 		}
