--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,9 +2,9 @@
 <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
 
-<link rel="stylesheet" href="{{ site.url }}/assets/highlight/monokai-sublime.css">
+<!--<link rel="stylesheet" href="{{ site.url }}/assets/highlight/monokai-sublime.css">
 <script src="{{ site.url }}/assets/highlight/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>hljs.initHighlightingOnLoad();</script>-->
 
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
