--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -24,8 +24,7 @@ code {
 
 figure {
   margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 9%;
   @include clearfix();
 
   img {
