--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,8 +20,8 @@ sitemap: false
 @import url(//cdn.jsdelivr.net/font-d2coding/1.2.1/d2coding.css);
 @import "site";
 @import "typography";
-//@import "syntax";
-//@import "coderay";
+@import "syntax";
+@import "coderay";
 @import "grid";
 @import "elements";
 @import "animations";
