--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -103,19 +103,24 @@ blockquote {
 
 .entry-content {
 	h1 {
-		border-left: 8px solid #999999;
-		padding-left: 20px;
-		font-size: 1.7em;
+		border-left: 5px solid #999999;
+		padding-left: 14px;
+		font-size: 1.7em;	
 
 		@media #{$medium} {
-			margin-left: -28px;
+			margin-left: -20px;
 		}
 	}
 	h2 {
-
+ 		// border-left: 9px solid #999999;
+		// padding-left: 10px;
+		// border-top-left-radius: 0.3em;
+		// border-bottom-left-radius: 0.3em;
 		font-size: 1.4em;
+		font-weight: 900;
+
 		@media #{$medium} {
-			margin-left: -10px;
+			// margin-left: -20px;
 		}
 	}
 }
