--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,7 +58,7 @@
 
 
 <!-- 네비게이션 용 -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">-->
 
 
 {% if page.image.background or site.background %}
