--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,7 +19,7 @@ $front-page-feature-image-height : 400px; // min 150px recommended
    Typography
    ========================================================================== */
 
-$code-font                       : 'Ubuntu', 'Jeju Gothic',  'Hanna', sans-serif;
+$code-font                       : 'Menlo', 'Jeju Gothic',  'Hanna', sans-serif;
 $base-font                       : 'Ubuntu', 'Jeju Gothic', 'NanumBarunGothic', sans-serif;
 $heading-font                    : $base-font;
 $caption-font                    : $base-font;
