--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav id="navigation" class="menu" >
+<nav id="navigation" class="menu">
 	<input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
 	<label class="menu-open-button menu-bars" for="menu-open">
 		<!--<span class="menu-open-span"><STRONG>Menu</STRONG></span>
@@ -7,11 +7,9 @@
 		<span class="lines line-2"></span>
 		<span class="lines line-3"></span>
 	</label>
-
 	<a href="#" class="menu-item green"><i class="fa fa-angle-up"></i></a>
 	<a href="{{ site.url }}/posts/" class="menu-item lightblue"><i class="fa fa-th-list"></i></a>
 	<a href="{{ site.url }}/" class="menu-item red"><i class="fa fa-home"></i></a>
-	<a href="{{ site.url }}/" class="menu-item purple"><i class="fa fa-user" aria-hidden="true"></i></a>
-
-
+	<a href="#" class="menu-open purple"><i class="fa fa-user" aria-hidden="true"></i></a>
+	
 </nav>
