--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,6 +10,6 @@
 	<a href="#" class="menu-item green"><i class="fa fa-angle-up"></i></a>
 	<a href="{{ site.url }}/posts/" class="menu-item lightblue"><i class="fa fa-th-list"></i></a>
 	<a href="{{ site.url }}/" class="menu-item red"><i class="fa fa-home"></i></a>
-	<a href="#" class="menu-open purple"><i class="fa fa-user" aria-hidden="true"></i></a>
+	<a href="#" class="menu-item purple"><i class="fa fa-user" aria-hidden="true"></i></a>
 	
 </nav>
