--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -98,6 +98,7 @@ svg:not(:root) {
   border-style: solid !important;
   border-color: $primary;
   border-radius: 3px;
+  box-shadow: 0px 12px 24px rgba(0,0,0,0.4);
 
   &:visited {
     color: #fff;
