--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,7 +42,8 @@ body {
 $base-color                      : rgba(#222,0.8);
 $body-color                      : #e8e8e8;
 $text-color                      : rgba(#222,0.8);
-$comp-color                      : complement(#222);
+// $comp-color                      : complement(#222);
+$comp-color                      : complement(rgba(0,0,0,0.75));
 $border-color                    : lighten($base-color,60);
 $link-color                      : rgba(#222,0.8);
 
