--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="{{ site.url }}/assets/js/plugins/jquery.arctic_scroll.js"><\/script>')</script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
+
 
 <!--<link rel="stylesheet" href="{{ site.url }}/assets/highlight/monokai-sublime.css">
 <script src="{{ site.url }}/assets/highlight/highlight.pack.js"></script>
