--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -148,7 +148,7 @@ h2.entry-subtitle{
 	h2 {
 		margin: 0;
 		color: #fff;
-		text-transform: uppercase;
+		// text-transform: uppercase;
 		@media #{$medium} {
 			a {
 				color: #fff;
