--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -606,7 +606,7 @@ Google Search
 
 .menu-item,
 .menu-open-button {
-	background: #EEEEEE;
+	background: #666666;
 	border-radius: 30%;
 	width: 40px;
 	height: 40px;
@@ -639,7 +639,7 @@ Google Search
 .lines {
 	width: 20px;
 	height: 2.2px;
-	background: #596778;
+	background: #ffffff;
 	display: block;
 	position: absolute;
 	top: 50%;
