--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -53,15 +53,26 @@
 				</ul>
 				<!-- /.dl-submenu -->
 			</li>
+
 			<li><a href="{{ site.url }}/posts/">Posts</a></li>
 			<li><a href="{{ site.url }}/tags/">Tags</a></li>
+
+
+			{% capture site_tags %}{% for tag in site.tags %}{{ tag | first }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+			{% assign tags_list = site_tags | split:',' | sort %}
+
+			{% for item in (0..site.tags.size) %}{% unless forloop.last %}
+			{% capture this_word %}{{ tags_list[item] | strip_newlines }}{% endcapture %}
+			<li><a href="{{ site.url }}/tags/#{{ this_word }}" class="tag"><span class="term">{{ this_word }}</a></li>
+		  	{% endunless %}{% endfor %}
+<!-- 
 			<li><a href="{{ site.url }}/tags/#C">C</a></li>
 			<li><a href="{{ site.url }}/tags/#C++">C++</a></li>
 			<li><a href="{{ site.url }}/tags/#Compiler">Compiler</a></li>
 			<li><a href="{{ site.url }}/tags/#Computer Graphics">Computer Graphics</a></li>
 			<li><a href="{{ site.url }}/tags/#Tips">Tips</a></li>
 			<li><a href="{{ site.url }}/tags/#VR">VR</a></li>
-			<li><a href="{{ site.url }}/tags/#Unreal Engine">Unreal Engine</a></li>
+			<li><a href="{{ site.url }}/tags/#Unreal Engine">Unreal Engine</a></li> -->
 			<!--{% for link in site.data.navigation %} {% if link.url contains 'http' %} {% assign domain = '' %} {% else %} {% assign domain
 			= site.url %} {% endif %}
 			<li><a href="{{ domain }}{{ link.url }}" {% if link.url contains 'http' %}target="_blank" {% endif %}>{{ link.title }}</a></li>
